--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-05-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+  * Added --enable-ccmalloc configure option.
+
 2002-05-09  Cristy  <cristy@mystic.es.dupont.com>
   * DCM patch provided by Shane Blackett.
 
