--- a/Magick++/INSTALL
+++ b/Magick++/INSTALL
@@ -5,11 +5,11 @@
 General
 
 In order to compile Magick++ you must have access to a standard C++
-implementation. The author uses  gcc 3.0.4 (GNU C++) which is available
-under UNIX and under the Cygwin UNIX-emulation environment for Windows.
-Standards compliant commercial C++ compilers should also work fine. Most
-modern C++ compilers for Microsoft Windows or the Mac should work (project
-files are provided for Microsoft Visual C++ 6.0).
+implementation. The author uses  gcc 3.1 (GNU C++) which is available under
+UNIX and under the Cygwin UNIX-emulation environment for Windows. Standards
+compliant commercial C++ compilers should also work fine. Most modern C++
+compilers for Microsoft Windows or the Mac should work (project files are
+provided for Microsoft Visual C++ 6.0).
 
 It was decided that Magick++ will be around for the long-haul, so its API
 definition depends on valuable C++ features which should be common in all
@@ -167,4 +167,3 @@ from  http://www.cygwin.com/xfree/ .To build using Cygwin and GCC, follow
 the instructions for building under Unix. ImageMagick and Magick++ do not
 yet include support for building Windows DLLs under Cygwin so do not enable
 dynamic libraries when building ImageMagick.
-
