--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-06-02  Cristy  <cristy@mystic.es.dupont.com>
+  * ImageMagick, version 5.4.6 released.
+
 2002-05-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * ImageMagick may now be built (static build only) using the
     free MinGW development package from http://www.mingw.org.
