Added -encode <type> option to commandline utilities.

--- a/utilities/ImageMagick.1
+++ b/utilities/ImageMagick.1
@@ -1167,6 +1167,13 @@ options \fIbefore\fP the \fB-draw\fP option.
 .B "-emboss"
 \fRemboss an image
 .TP
+.B "-encoding \fI<type>"\fP
+\fRspecify the font encoding
+
+Choose from \fIAdobeCustom, AdobeExpert, AdobeStandard, AppleRoman,
+BIG5, GB2312, Latin 2, None, SJIScode, Symbol, Unicode, Wansung.\fP
+
+.TP
 .B "-endian \fI<type>"\fP
 \fRspecify endianness (MSB or LSB) of output image
 
