--- a/utilities/convert.1
+++ b/utilities/convert.1
@@ -205,6 +205,9 @@ For a more detailed description of each option, see
 .B "-emboss"
 \fRemboss an image
 .TP
+.B "-encoding \fI<type>"\fP
+\fRspecify the font encoding
+.TP
 .B "-endian \fI<type>"\fP
 \fRspecify endianness (MSB or LSB) of output image
 .TP
