--- a/utilities/montage.1
+++ b/utilities/montage.1
@@ -175,6 +175,9 @@ For a more detailed description of each option, see
 .B "-draw \fI<string>"\fP
 \fRannotate an image with one or more graphic primitives
 .TP
+.B "-encoding \fI<type>"\fP
+\fRspecify the font encoding
+.TP
 .B "-endian \fI<type>"\fP
 \fRspecify endianness (MSB or LSB) of output image
 .TP
@@ -235,8 +238,8 @@ For a more detailed description of each option, see
 .B "-quality \fI<value>"\fP
 \fRJPEG/MIFF/PNG compression level
 .TP
-.B "-resize \fI<width>x<height>{+-}<x>{+-}<y>{%}{@}{!}{<}{>}"\fP
-\fRresize and locate an image
+.B "-resize \fI<width>x<height>{%}{@}{!}{<}{>}"\fP
+\fRresize an image
 .TP
 .B "-rotate \fI<degrees>{<}{>}"\fP
 \fRapply Paeth image rotation to the image
