--- a/utilities/mogrify.1
+++ b/utilities/mogrify.1
@@ -21,12 +21,20 @@ To convert all the TIFF files in a particular directory to JPEG, use:
 
 To convert a directory full of JPEG images to thumbnails, use:
 
-    convert -size 120x120 *.jpg -geometry 120x120 +profile '*'
+    convert -size 120x120 *.jpg -resize 120x120 +profile '*'
+
+In this example, "-i size 120x120" gives a hint to the JPEG decoder
+that the images are going to be downscaled to 120x120, allowing it to run
+faster by avoiding returning full-resolution images.  The
+"-resize 120x120" specifies the desired dimensions of the
+output images.  It will be scaled so its largest dimension is 120 pixels.  The
+"+profile '*'" removes any ICM, EXIF, IPTC, or other profiles
+that might be present in the input and aren't needed in the thumbnails.
 
 To scale an image of a cockatoo to exactly 640 pixels in width and 480
 pixels in height, use: 
 
-    mogrify -geometry 640x480! cockatoo.miff
+    mogrify -resize 640x480! cockatoo.miff
 .SH OPTIONS
 
 Options are processed in command line order. Any option you specify on
@@ -120,6 +128,9 @@ For a more detailed description of each option, see
 .TP
 .B "-emboss"
 \fRemboss an image
+.TP
+.B "-encoding \fI<type>"\fP
+\fRspecify the font encoding
 .TP
 .B "-endian \fI<type>"\fP
 \fRspecify endianness (MSB or LSB) of output image
@@ -250,8 +261,8 @@ For a more detailed description of each option, see
 .B "-region \fI<width>x<height>{+-}<x>{+-}<y>"\fP
 \fRapply options to a portion of the image
 .TP
-.B "-resize \fI<width>x<height>{+-}<x>{+-}<y>{%}{@}{!}{<}{>}"\fP
-\fRresize and locate an image
+.B "-resize \fI<width>x<height>{%}{@}{!}{<}{>}"\fP
+\fRresize an image
 .TP
 .B "-roll \fI{+-}<x>{+-}<y>"\fP
 \fRroll an image vertically or horizontally
