*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2002-06-09  Cristy  <cristy@mystic.es.dupont.com>
 	* Label color could not be set (bug report by Ron Savage).
-	* Warnings were being reported as error exceptions in PerlMagick.
+	* Added CatchException() method to magick/error.c.
 
 2002-06-06  Cristy  <cristy@mystic.es.dupont.com>
 	* ImageMagick, version 5.4.6-1 released.
