Mentioned that input file is not overwritten when -format changes the output filename to something different from the input filename.

--- a/utilities/mogrify.1
+++ b/utilities/mogrify.1
@@ -9,7 +9,9 @@ mogrify - mogrify an image
 
 \fBMogrify\fP transforms an image or a sequence of images. These transforms
 include image scaling, image rotation, color reduction, and others. The
-transmogrified image overwrites the original image. 
+transmogrified image overwrites the original image, unless an option such as
+\fB-format\fP causes the output filename to be different from the input
+filename.
 
 The graphics formats supported by \fBmogrify\fP are listed in
 \fIImageMagick(1)\fP.
