Change "matte (transparent)" to "matte (frame)"

--- a/utilities/conjure.1
+++ b/utilities/conjure.1
@@ -231,7 +231,7 @@ use. Currently only \fIwidth\fP and \fIheight\fP are supported.
  \fR
 .in 20
 background, bordercolor, clip-mask, colorspace, density,
-magtick, mattecolor, opacity.  Set an attribute recognized by
+magick, mattecolor, opacity.  Set an attribute recognized by
 PerlMagick's GetAttribute().
 .in 15
 .in 15
