--- a/Magick++/NEWS
+++ b/Magick++/NEWS
@@ -1,7 +1,7 @@
-This file records noteworthy changes in Magick++.  As of Magick++ 5.2.3,
-Magick++ release numbering tracks ImageMagick release numbering so the
-Magick++ release number increments even if there are no changes associated
-with Magick++ itself.
+This file records noteworthy changes in Magick++.
+
+(5.4.7)
+  * Nothing yet.
 
 (5.4.6)
   * Magick++ library no longer depends on C++ iostreams APIs.
