Dr. Hallo -> Dr. Halo

--- a/utilities/ImageMagick.1
+++ b/utilities/ImageMagick.1
@@ -105,7 +105,7 @@ The \fBImageMagick\fP utilities recognize the following image formats:
  o  CMYKA     *rw- Raw cyan, magenta, yellow, black, and
                    matte samples (8 or 16 bits, depending
                    on the image depth)
- o  CUT       *r-- DR Hallo
+ o  CUT       *r-- DR Halo
  o  DCM       *r-- Digital Imaging and Communications in
                     Medicine image
  o  DCX       *rw+ ZSoft IBM PC multi-page Paintbrush
@@ -1666,7 +1666,7 @@ Use \fB+matte\fP to ignore the matte channel and to avoid writing a
 matte channel in the output file.
 .TP
 .B "-mattecolor \fI<color>"\fP
-\fRspecify the matte color
+\fRspecify the color to be used with the \fB-frame\fP option
 
 The color is specified using the format described in the "Color Names"
 section of \fIX(1)\fP.
