--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-06-18  Cristy  <cristy@mystic.es.dupont.com>
+	* Added PerlMagick threading support (patch by Doug MacEachern).
+
 2002-06-14  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
   * The wbmp writer would dump core if it received a DirectClass image
     that contained only black and white pixels, because no colormap exists.
