--- a/utilities/display.1
+++ b/utilities/display.1
@@ -263,7 +263,7 @@ display image using this type.
 \fRstore matte channel if the image has one
 .TP
 .B "-mattecolor \fI<color>"\fP
-\fRspecify the matte color
+\fRspecify the color to be used with the \fB-frame\fP option
 .TP
 .B "-monochrome"
 \fRtransform the image to black and white
