--- a/utilities/montage.1
+++ b/utilities/montage.1
@@ -122,7 +122,7 @@ For a more detailed description of each option, see
 \fRthe background color
 .TP
 .B "-blur \fI<radius>x<sigma>"\fP
-\fRblur the image with a gaussian operator
+\fRblur the image with a Gaussian operator
 .TP
 .B "-bordercolor \fI<color>"\fP
 \fRthe border color
@@ -215,7 +215,7 @@ For a more detailed description of each option, see
 \fRstore matte channel if the image has one
 .TP
 .B "-mattecolor \fI<color>"\fP
-\fRspecify the matte color
+\fRspecify the color to be used with the \fB-frame\fP option
 .TP
 .B "-mode \fI<value>"\fP
 \fRmode of operation
