--- a/utilities/mogrify.1
+++ b/utilities/mogrify.1
@@ -57,7 +57,7 @@ For a more detailed description of each option, see
 \fRthe background color
 .TP
 .B "-blur \fI<radius>x<sigma>"\fP
-\fRblur the image with a gaussian operator
+\fRblur the image with a Gaussian operator
 .TP
 .B "-border \fI<width>x<height>"\fP
 \fRsurround the image with a border of color
@@ -170,8 +170,8 @@ For a more detailed description of each option, see
 .B "-gamma \fI<value>"\fP
 \fRlevel of gamma correction
 .TP
-.B "-gaussian \fI<radius>x<sigma>"\fP
-\fRblur the image with a gaussian operator
+.B "-Gaussian \fI<radius>x<sigma>"\fP
+\fRblur the image with a Gaussian operator
 .TP
 .B "-geometry \fI<width>x<height>{+-}<x>{+-}<y>{%}{@} {!}{<}{>}"\fP
 \fRpreferred size and location of the Image window.
@@ -213,7 +213,7 @@ For a more detailed description of each option, see
 \fRstore matte channel if the image has one
 .TP
 .B "-mattecolor \fI<color>"\fP
-\fRspecify the matte color
+\fRspecify the color to be used with the \fB-frame\fP option
 .TP
 .B "-median \fI<radius>"\fP
 \fRapply a median filter to the image
