--- a/utilities/convert.1
+++ b/utilities/convert.1
@@ -332,7 +332,7 @@ For a more detailed description of each option, see
 \fRefficiently determine image characteristics
 .TP
 .B "-pointsize \fI<value>"\fP
-\fRpointsize of the Postscript, OPTION1, or TrueType font
+\fRpointsize of the PostScript, OPTION1, or TrueType font
 .TP
 .B "-preview \fI<type>"\fP
 \fRimage preview type
