--- a/utilities/import.1
+++ b/utilities/import.1
@@ -28,7 +28,7 @@ in the MIFF image format to a file entitled window.miff, use:
     import window.miff
 
 To select an X window or an area of the screen with the mouse and save it
-in the Encapsulated Postscript format to include in another document, use:
+in the Encapsulated PostScript format to include in another document, use:
 
     import figure.eps
 
@@ -136,7 +136,7 @@ For a more detailed description of each option, see
 \fRefficiently determine image characteristics
 .TP
 .B "-pointsize \fI<value>"\fP
-\fRpointsize of the Postscript, OPTION1, or TrueType font
+\fRpointsize of the PostScript, OPTION1, or TrueType font
 .TP
 .B "-quality \fI<value>"\fP
 \fRJPEG/MIFF/PNG compression level
