--- a/utilities/mogrify.1
+++ b/utilities/mogrify.1
@@ -249,7 +249,7 @@ For a more detailed description of each option, see
 \fRspecify the pen color for drawing operations
 .TP
 .B "-pointsize \fI<value>"\fP
-\fRpointsize of the Postscript, OPTION1, or TrueType font
+\fRpointsize of the PostScript, OPTION1, or TrueType font
 .TP
 .B "-profile \fI<filename>"\fP
 \fRadd ICM, IPTC, or generic profile  to image
