--- a/utilities/montage.1
+++ b/utilities/montage.1
@@ -233,7 +233,7 @@ For a more detailed description of each option, see
 \fRspecify the pen color for drawing operations
 .TP
 .B "-pointsize \fI<value>"\fP
-\fRpointsize of the Postscript, OPTION1, or TrueType font
+\fRpointsize of the PostScript, OPTION1, or TrueType font
 .TP
 .B "-quality \fI<value>"\fP
 \fRJPEG/MIFF/PNG compression level
