Use quantum depth to distinguish between installs.

--- a/Magick++/NEWS
+++ b/Magick++/NEWS
@@ -1,7 +1,7 @@
 This file records noteworthy changes in Magick++.
 
 (5.4.7)
-  * Nothing yet.
+  * No changes to report.
 
 (5.4.6)
   * Magick++ library no longer depends on C++ iostreams APIs.
