Improve -antialias documentation.

--- a/utilities/ImageMagick.1
+++ b/utilities/ImageMagick.1
@@ -324,7 +324,12 @@ use by subsequent \fB-draw\fP or \fB-transform\fP options.
 
 .TP
 .B "-antialias"
-\fRremove pixel aliasing
+\fRremove pixel aliasing.
+
+By default antialiasing algorithms are used when drawing objects (e.g. lines)
+or rendering vector formats (e.g. WMF and Postscript). Use +antialias to
+disable use of antialiasing algorithms. Reasons to disable antialiasing
+include avoiding increasing colors in the image, or improving rendering speed.
 .TP
 .B "-append"
 \fRappend a set of images
