Changed '*' to "*" in profile documentation.

--- a/utilities/mogrify.1
+++ b/utilities/mogrify.1
@@ -23,14 +23,14 @@ To convert all the TIFF files in a particular directory to JPEG, use:
 
 To convert a directory full of JPEG images to thumbnails, use:
 
-    convert -size 120x120 *.jpg -resize 120x120 +profile '*'
+    convert -size 120x120 *.jpg -resize 120x120 +profile "*"
 
-In this example, "-i size 120x120" gives a hint to the JPEG decoder
+In this example, '-i size 120x120' gives a hint to the JPEG decoder
 that the images are going to be downscaled to 120x120, allowing it to run
 faster by avoiding returning full-resolution images.  The
-"-resize 120x120" specifies the desired dimensions of the
+'-resize 120x120' specifies the desired dimensions of the
 output images.  It will be scaled so its largest dimension is 120 pixels.  The
-"+profile '*'" removes any ICM, EXIF, IPTC, or other profiles
+'+profile "*"' removes any ICM, EXIF, IPTC, or other profiles
 that might be present in the input and aren't needed in the thumbnails.
 
 To scale an image of a cockatoo to exactly 640 pixels in width and 480
