Fixed some minor typos

--- a/utilities/ImageMagick.1
+++ b/utilities/ImageMagick.1
@@ -300,7 +300,7 @@ utilities (\fIanimate, composite, convert, display, identify,
 import, mogrify\fP and \fImontage\fP).
 
 
-In this document, angle brackets ("<>") enclose variables, and curly
+In this document, angle brackets ("<>") enclose variables and curly
 brackets ("{}") enclose optional parameters. For example,
 "\fB-fuzz <distance>{%}\fP" means you can use the
 option "-fuzz 10"
@@ -2105,7 +2105,7 @@ This option specifies the sampling factors to be used by the JPEG encoder for
 chroma downsampling.  If this option is omitted, the JPEG library
 will use its own default values.  When reading or writing the YUV format
 and when writing the M2V (MPEG-2) format, use
-\fB-sampling_factor 2x1\fPto specify the 4:2:2 downsampling method
+\fB-sampling_factor 2x1\fP to specify the 4:2:2 downsampling method.
 .TP
 .B "-scale \fI<geometry>"\fP
 \fRscale the image.
