--- a/utilities/display.1
+++ b/utilities/display.1
@@ -135,7 +135,7 @@ file. See \fIX(1)\fP. Options on the command line supersede values specified
 in your X resources file.
 
 For a more detailed description of each option, see
-\fIimagemagick(1)\fP.
+\fIImageMagick(1)\fP.
 
 .TP
 .B "-backdrop \fI<color>"\fP
