--- a/ChangeLog
+++ b/ChangeLog
@@ -1,22 +1,21 @@
 2002-07-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * Added SubstituteString to utility.c for performing substitions
     on strings.
-  * Added support for performing Ghostscript-related substitutions
-    while reading delegates.mgk and type.mgk files.
+  * Added support for performing Ghostscript-related substitutions while
+    reading delegates.mgk and type.mgk files.
+
 2002-07-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * Added the Windows utility functions NTGhostscriptDLL(),
-    NTGhostscriptEXE(), and NTGhostscriptFonts(), to find the
-    DLL, executable, and font directory corresponding to the
-    newest Ghostscript install on the system.
+    NTGhostscriptEXE(), and NTGhostscriptFonts(), to find the DLL,
+    executable, and font directory corresponding to the newest Ghostscript
+    install on the system.
 
 2002-07-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * Split nt.c into ntbase.c and ntfeature.c
   * Split nt.h into ntbase.h and ntfeature.h
-  * Invoke NTIsMagickConflict() under Cygwin to ensure that
-    drive letters in file specifications are not confused with
-    magick strings.
-  * Invoke NTGetTypeList() under Cygwin to read the list of
-    Windows fonts.
+  * Invoke NTIsMagickConflict() under Cygwin to ensure that drive letters
+    in file specifications are not confused with magick strings.
+  * Invoke NTGetTypeList() under Cygwin to read the list of Windows fonts.
 
 2002-07-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * Created Windows "setup.exe" style installation package for
