--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-04  Cristy  <cristy@mystic.es.dupont.com>
+  * Added experimental 32-bit QuantumDepth pixel support.
+  * Stream support was not thread-safe (bug report by William Radcliffe).
+    
 2002-08-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * Changed configure argument --disable-16bit-pixel to
     --with-quantum-depth in order to make its usage more
