Mention that -pen is deprecated and -fill should be used instead.

--- a/utilities/ImageMagick.1
+++ b/utilities/ImageMagick.1
@@ -1884,6 +1884,8 @@ snapshot.
 
 The color is specified using the format described in the "Color Names"
 section of \fIX(1)\fP.
+
+This option is deprecated; use \fB-fill\fP instead.
 .TP
 .B "-ping"
 \fRefficiently determine image characteristics
