--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+  * Fixed a libtool bug in order to allow passing -m64 to
+    allow building 64-bit ImageMagick using gcc 3.1 or later
+    under SPARC Solaris.
+
 2002-08-04  Cristy  <cristy@mystic.es.dupont.com>
   * Added experimental 32-bit QuantumDepth pixel support.
   * Stream support was not thread-safe (bug report by William Radcliffe).
