--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-08-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+  * Re-implemented ReadTTFImage() using the draw.h APIs.
+
 2002-08-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * Fixed a libtool bug in order to allow passing -m64 to allow building
     64-bit ImageMagick using gcc 3.1 or later under SPARC Solaris.
