--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-08-14  Cristy  <cristy@mystic.es.dupont.com>
+  * Added 16-bit raw write support to PPM.
+
 2002-08-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * Re-implemented ReadTTFImage() using the draw.h APIs.
 
