--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-15  Cristy  <cristy@mystic.es.dupont.com>
+  * Finished 32-Bit QuantumDepth support.
+	* Subimage memory leak fixed (bug report by William Radcliffe).
+
 2002-08-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * Fix problem with TEXT encoder.  It was prepending the
     filename to the text.
